--- a/panel.html
+++ b/panel.html
@@ -701,9 +701,9 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>0001</td>
-                                    <td>roberto</td>
-                                    <td>elmaestro</td>
+                                    <td>0</td>
+                                    <td>Roberto</td>
+                                    <td>Lic. en casi todo</td>
                                     <td> <button type="button" class="btn btn-outline-secondary btn-sm py-0"
                                             data-toggle="modal" data-target="#modalProfesionalesXL">ver</button>
                                 </tr>
