--- a/panel.html
+++ b/panel.html
@@ -718,7 +718,7 @@
                                     <td>Roberto</td>
                                     <td>Lic. en casi todo</td>
                                     <td> <button type="button" class="btn btn-outline-secondary btn-sm py-0"
-                                            data-toggle="modal" data-target="#modalProfesionalesXL">ver</button>
+                                            data-toggle="modal" data-target="#modalProfesionalesXL">ver</button></td>
                                 </tr>
 
 
