Panel profesionales. Sumar profesional corregido

--- a/panel.html
+++ b/panel.html
@@ -655,7 +655,7 @@
                 </div>
                 <div class="col-3">
                     <button type="button" id="botonSumarProf" class="btn btn-outline-primary btn-sm d-none"
-                        data-toggle="modal" data-target="#modalProfesionalesXL" onclick="funcionBotonProfesionales()">+
+                        data-toggle="modal" data-target="#modalProfesionalesXL" onclick="mostrarEnModal('vacio');funcionBotonProfesionales()">+
                         Sumar
                         profesional</button>
                 </div>
@@ -718,7 +718,7 @@
                                     <td>Roberto</td>
                                     <td>Lic. en casi todo</td>
                                     <td> <button type="button" class="btn btn-outline-secondary btn-sm py-0"
-                                            data-toggle="modal" data-target="#modalProfesionalesXL">ver</button></td>
+                                            data-toggle="modal" data-target="#modalProfesionalesXL" onclick="mostrarEnModal(3)">ver</button></td>
                                 </tr>
 
 
