w0.26 panel2 agregado, footer index arreglado.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                     <li class="nav-item ml-auto">
                         <a class="nav-link" href="panel.html">Panel&nbsp;&nbsp;<i class="fas fa-columns"></i></a>
                     </li>
+                    <li class="nav-item active ml-auto">
+                        <a class="nav-link" href="panel2.html">Panel2&nbsp;&nbsp;<i class="fas fa-columns"></i></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -101,7 +104,8 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary" onclick= "obtenerDatos()" data-dismiss="modal" >Log In</button>   
+                    <button type="button" class="btn btn-primary" onclick="obtenerDatos()" data-dismiss="modal">Log
+                        In</button>
                 </div>
             </div>
         </div>
@@ -524,9 +528,9 @@
     <!--webfooter-->
 
     <section class="bg-dark text-white">
-        <footer class="container mt-auto py-2 align-middle text-center">
-            copyright 2019 Roberto coworking - dir - tel
-        </footer>
+            <footer class="bg-dark text-white footer mt-auto py-2 align-middle text-center px-5">
+                    copyright 2019 Roberto coworking - Dirección: Av. Siempreviva 742 - Telefono: 0-800-Roberto
+                </footer>
     </section>
 
     <!--scripts-->
@@ -542,10 +546,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="scripts.js"></script>
-    <script src= "TablasUsers.js"></script>
+    <script src="TablasUsers.js"></script>
     <script src="panelAdmApp.js"></script>
-    
-    
+
+
 
     <!--hola-->
 </body>
