--- a/panel.html
+++ b/panel.html
@@ -494,6 +494,9 @@
                     <li class="nav-item active ml-auto">
                         <a class="nav-link" href="panel.html">Panel&nbsp;&nbsp;<i class="fas fa-columns"></i></a>
                     </li>
+                    <li class="nav-item active ml-auto">
+                        <a class="nav-link" href="panel2.html">Panel2&nbsp;&nbsp;<i class="fas fa-columns"></i></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -655,7 +658,8 @@
                 </div>
                 <div class="col-3">
                     <button type="button" id="botonSumarProf" class="btn btn-outline-primary btn-sm d-none"
-                        data-toggle="modal" data-target="#modalProfesionalesXL" onclick="mostrarEnModal('vacio');funcionBotonProfesionales()">+
+                        data-toggle="modal" data-target="#modalProfesionalesXL"
+                        onclick="mostrarEnModal('vacio');funcionBotonProfesionales()">+
                         Sumar
                         profesional</button>
                 </div>
@@ -718,7 +722,8 @@
                                     <td>Roberto</td>
                                     <td>Lic. en casi todo</td>
                                     <td> <button type="button" class="btn btn-outline-secondary btn-sm py-0"
-                                            data-toggle="modal" data-target="#modalProfesionalesXL" onclick="mostrarEnModal(3)">ver</button></td>
+                                            data-toggle="modal" data-target="#modalProfesionalesXL"
+                                            onclick="mostrarEnModal(3)">ver</button></td>
                                 </tr>
 
 
