w0.27 boton cerrar y guardar, nombres.

--- a/panel.html
+++ b/panel.html
@@ -315,10 +315,10 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                        onclick="funcionSalirModalSinGrabar()">Close</button>
+                        onclick="funcionSalirModalSinGrabar()">Cerrar</button>
                     <button type="button" class="btn btn-primary"
                         onclick="cargarDatosNuevosUsuarios();cargarDatosTabla(Profesionales,'lista-profesionales')"
-                        data-dismiss="modal">Save changes</button>
+                        data-dismiss="modal">Guardar</button>
 
                 </div>
             </div>
@@ -446,7 +446,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                        onclick="funcionSalirModalSinGrabar2()">Close</button>
+                        onclick="funcionSalirModalSinGrabar2()">Cerrar</button>
                     <button type="button" class="btn btn-primary" onclick="funcionModalGrabando2()">Save
                         changes</button>
                 </div>
